refactor(pom): re-parent module "product-service" to project parent pom.